--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.jayvee.dirtoffseeker">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -31,8 +32,9 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_place_api" />
         <meta-data
-            android:name="com.facebook.sdk.ApplicationId"
-            android:value="@string/facebook_app_id" />
+            tools:replace="android:value,android:name"
+            android:value="@string/facebook_app_id"
+            android:name="com.facebook.sdk.ApplicationId"/>
 
         <activity
             android:name="com.facebook.FacebookActivity"
@@ -62,9 +64,12 @@
             android:name=".WorkerProfileActivity"
             android:label="Worker Profile"
             android:parentActivityName=".FindWorkerActivity" />
-        <activity android:name=".BookingInformationActivity"
+        <activity
+            android:name=".BookingInformationActivity"
             android:label="Booking Information"
-            android:parentActivityName=".NavigationDrawer"/>
+            android:parentActivityName=".NavigationDrawer" />
+        <activity android:name=".LaundryBasketActivity" />
+        <activity android:name=".LaundryBasketBulkyActivity" />
     </application>
 
 </manifest>
