--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,10 @@ allprojects {
         google()
         jcenter()
         mavenCentral()
+
+        maven {
+            url 'https://maven.fabric.io/public'
+        }
     }
 }
 
