--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,11 +24,15 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.android.support:design:26.1.0'
     implementation 'com.facebook.android:facebook-login:4.29.0'
+
     implementation 'com.google.android.gms:play-services:10.2.0'
     implementation 'com.google.firebase:firebase-database:10.2.0'
     implementation 'com.firebaseui:firebase-ui:1.2.0'
     implementation 'com.firebaseui:firebase-ui-storage:1.2.0'
     implementation 'com.firebaseui:firebase-ui-database:1.2.0'
+
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+
     implementation 'com.android.support:support-v4:26.1.0'
     implementation 'com.afollestad.material-dialogs:commons:0.9.6.0'
     testImplementation 'junit:junit:4.12'
