--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,9 +32,9 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_place_api" />
         <meta-data
-            tools:replace="android:value,android:name"
+            android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id"
-            android:name="com.facebook.sdk.ApplicationId"/>
+            tools:replace="android:value,android:name" />
 
         <activity
             android:name="com.facebook.FacebookActivity"
@@ -70,6 +70,9 @@
             android:parentActivityName=".NavigationDrawer" />
         <activity android:name=".LaundryBasketActivity" />
         <activity android:name=".LaundryBasketBulkyActivity" />
+        <activity android:name=".MyAccountRatingActivity"
+            android:label="Worker Ratings"
+            android:parentActivityName=".WorkerProfileActivity"/>
     </application>
 
 </manifest>
